working on buringin lein with fire